--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -18,7 +18,10 @@
 				<div class="col-sm-11">
 						<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
-						<project-activity-variable project="project" planning="planning"></project-activity-variable>
+
+						<select class="form-control input-sm"
+								ng-model="planning.variable"
+								ng-options="v.id as v.name group by v.group for v in sources"></select>
 					</div>
 				</div>
 			</div>
