--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -64,8 +64,8 @@
 						<a ui-sref="main.project.collection_input_list"
 						   class="list-group-item"
 						   ng-class="{active: $state.is('main.project.collection_input_list') || $state.is('main.project.collection_input_edition')}"
-						   eat-click-if="!project._id || !projectHasForms || !projectHasEntities"
-						   disable-if="!project._id || !projectHasForms || !projectHasEntities">
+						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
+						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
 							
 							<i class="fa fa-pencil fa-fw"></i>
 							<span translate="project.collection_input_list"></span>
@@ -74,18 +74,27 @@
 						<a ui-sref="main.project.activity_reporting"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasForms || !projectHasEntities"
-						   disable-if="!project._id || !projectHasForms || !projectHasEntities">
+						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
+						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
 
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting_general"></span>
 						</a>
 
+						<a ui-sref="main.project.detailed_activity_reporting"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
+						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
+							<i class="fa fa-bar-chart fa-fw"></i>
+							<span translate="project.reporting_compare_sites"></span>
+						</a>
+
 						<a ui-sref="main.project.olap"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasForms || !projectHasEntities"
-						   disable-if="!project._id || !projectHasForms || !projectHasEntities">
+						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
+						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
 							<i class="fa fa-table fa-fw"></i>
 							<span translate="project.pivot_table"></span>
 						</a>
@@ -106,15 +115,16 @@
 						   class="list-group-item"
 						   eat-click-if="!project._id" disable-if="!project._id">
 
+							<span class="label label-default pull-right">{{project.logicalFrames.length}}</span>
 							<i class="fa fa-object-group fa-fw"></i>
-							<span translate="shared.logical_frame"></span>
+							<span translate="shared.logical_frames"></span>
 						</a>
 
 						<a ui-sref="main.project.indicators_reporting"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasForms || !projectHasEntities"
-						   disable-if="!project._id || !projectHasForms || !projectHasEntities">
+						   eat-click-if="!project._id || !projectHasIndicators"
+						   disable-if="!project._id || !projectHasIndicators">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting_general"></span>
 						</a>
@@ -122,11 +132,11 @@
 						<a ui-sref="main.project.detailed_indicators_reporting"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasForms || !projectHasEntities"
-						   disable-if="!project._id || !projectHasForms || !projectHasEntities">
+						   eat-click-if="!project._id || !projectHasIndicators"
+						   disable-if="!project._id || !projectHasIndicators">
 
 							<i class="fa fa-bar-chart fa-fw"></i>
-							<span translate="shared.reporting_by_indicator"></span>
+							<span translate="project.reporting_compare_sites"></span>
 						</a>
 <!--
 						<a ui-sref="main.project.reporting_analysis_list"
