--- a/client/dev/partials/projects/activity/collection-form-list.html
+++ b/client/dev/partials/projects/activity/collection-form-list.html
@@ -37,7 +37,10 @@
 	<tfoot acl-has-project-role="owner">
 		<tr>
 			<td colspan="8">
-				<button class="btn btn-default btn-xs" style="width: 100%" ui-sref="main.project.collection_form_edition({formId: 'new'})" translate="shared.add"></button>
+				<button class="btn btn-default btn-xs"
+						style="width: 100%"
+						ui-sref="main.project.collection_form_edition({formId: 'new'})"
+						translate="shared.add"></button>
 			</td>
 		</tr>
 	</tfoot>
