--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -106,8 +106,8 @@
 			<td class="indent{{row.indent}}">
 				<label for="{{row.id}}">{{row.name}}</label>
 			</td>
-			<td>{{row.baseline}}{{row.unit}}</td>
-			<td>{{row.target}}{{row.unit}}</td>
+			<td>{{row.baseline}}</td>
+			<td>{{row.target}}</td>
 			<td ng-repeat="col in row.cols track by $index" indicator-reporting-field></td>
 		</tr>
 	</tbody>
