Load indicator name in logframe modal Improve parameter filter by filling missing columns

--- a/client/dev/partials/projects/indicators/selection-modal-tree.html
+++ b/client/dev/partials/projects/indicators/selection-modal-tree.html
@@ -8,8 +8,9 @@
 
 	<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
 		<span class="pull-right">
-			<span class="label label-default" tooltip="{{'indicator.num_collecting_projects'|translate}}">{{indicator.__usage}}</span>
-
+			<span class="label label-default"
+				  tooltip="{{'indicator.num_collecting_projects'|translate}}">{{indicator.__usage}}</span>
+		
 			<a class="btn btn-xs btn-default"
 				ng-click="choose(indicator._id)"
 				ng-disabled="forbidden.indexOf(indicator._id) !== -1"
