--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -12,9 +12,9 @@
 
 		<div class="form-group">
 			<label for="indicator-input" class="col-sm-2 control-label" translate="shared.indicator"></label>
-			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.indicator">
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="indicator.name[language]">
 				<div class="input-group">
-					<input id="indicator-input" type="text" ng-model="planning.indicator" class="form-control" disabled />
+					<input id="indicator-input" type="text" ng-model="indicator.name[language]" class="form-control" disabled />
 
 					<span class="input-group-btn">
 						<a class="btn btn-default" translate="project.choose"></a>
@@ -87,7 +87,10 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="(key, parameter) in planning.parameters">
+					<!-- parameter key (this one we edit in the formula) -->
 					<td style="width: 15%">{{key}}</td>
+
+					<!-- elementId -->
 					<td ng-style="{width: 85 / (numParameters + 1) + '%'}">
 						<select required
 								class="form-control"
@@ -95,12 +98,26 @@
 								ng-options="v.id as v.name group by v.group for v in elements"></select>
 					</td>
 
-					<td ng-style="{width: 85 / (numParameters + 1) + '%'}" ng-repeat="(index, partition) in filters[parameter.elementId].partitions">
+					<!-- partition filters -->
+					<td ng-if="parameter.elementId"
+						ng-style="{width: 85 / (numParameters + 1) + '%'}"
+						ng-repeat="(index, partition) in filters[parameter.elementId].partitions">
+
 						<ui-select multiple ng-model="parameter.filter['partition' + index]" theme="bootstrap" required>
 							<ui-select-match placeholder="{{'project.all_selected'|translate}}">{{$item.name}}</ui-select-match>
 							<ui-select-choices repeat="p.id as p in partition">{{p.name}}</ui-select-choices>
 						</ui-select>
 					</td>
+	
+					<!-- filler -->
+					<td ng-if="parameter.elementId && numParameters != filters[parameter.elementId].partitions.length"
+						ng-style="{width: (numParameters - filters[parameter.elementId].partitions.length) * 85 / (numParameters + 1) + '%'}"
+						colspan="{{numParameters - filters[parameter.elementId].partitions.length}}"></td>
+					
+					<td ng-if="!parameter.elementId"
+						ng-style="{width: numParameters * 85 / (numParameters + 1) + '%'}"
+						colspan="{{numParameters}}"></td>
+
 				</tr>
 			</tbody>
 		</table>
