--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -7,10 +7,15 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
+
+			<img alt="Brand" src="/img/logo.svg" style="height: 30px; margin: 0">
+
 		</div>
-		
+
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav" ng-if="userCtx">
+			
+
+			<ul class="nav navbar-nav">
 				<li ng-class="{active: $state.includes('main.home')}">
 					<a ui-sref="main.home">
 						<i class="fa fa-fw fa-home"></i>
@@ -59,7 +64,7 @@
 					</ul>
 				</li>
 				
-				<li dropdown ng-if="userCtx">
+				<li dropdown>
 					<a href="#" dropdown-toggle>
 						<i class="fa fa-fw fa-user"></i>
 						{{userCtx.name}}
